# liferewind

./: .vercelignore  README.md  app.py  fix_app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
backend/: database.py  embedding.py  image_analysis.py  main.py  memory_log.json  memory_store.py  openai_handler.py  speech_to_text.py  supabase_db.py
backend/vector_db/: memories.json
frontend/: app.py  users.json
